Criei fundo007, ex022

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 98.3vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-attachment: fixed; */       
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 500px;
             padding: 10px;
             margin: auto;
             border: 2px solid darkblue;
@@ -29,6 +31,17 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ipsum aliquid quis eaque aut voluptatem mollitia quas quibusdam, explicabo inventore architecto impedit quod nobis repellat voluptates? Officiis quia alias dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. In nesciunt atque rem explicabo eveniet quisquam inventore mollitia. Debitis sint consectetur suscipit, exercitationem natus similique et iusto sequi vitae molestiae minima? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, vel veritatis. Voluptatum aut ratione, voluptatibus quaerat assumenda asperiores ullam sit quia est unde! Quasi, aperiam? Deserunt eveniet vel sint minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae at laudantium ullam a voluptatibus eum. Voluptas veritatis provident architecto qui. Est nemo dolor esse repellendus labore consequatur nulla laborum ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil explicabo quis voluptatem officiis deserunt, veniam earum! Iure adipisci commodi omnis iusto laudantium vero, tempora placeat repellendus minima, eveniet deserunt sint.</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cumque nihil corrupti error beatae eveniet id odit consequuntur ducimus, explicabo voluptatum architecto? Non, reiciendis? Recusandae consequuntur quis quasi quae numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, asperiores autem quam accusantium assumenda, itaque voluptas, natus deleniti cumque excepturi exercitationem commodi magni et. Est dolores omnis dignissimos maiores harum.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ipsum aliquid quis eaque aut voluptatem mollitia quas quibusdam, explicabo inventore architecto impedit quod nobis repellat voluptates? Officiis quia alias dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. In nesciunt atque rem explicabo eveniet quisquam inventore mollitia. Debitis sint consectetur suscipit, exercitationem natus similique et iusto sequi vitae molestiae minima? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, vel veritatis. Voluptatum aut ratione, voluptatibus quaerat assumenda asperiores ullam sit quia est unde! Quasi, aperiam? Deserunt eveniet vel sint minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae at laudantium ullam a voluptatibus eum. Voluptas veritatis provident architecto qui. Est nemo dolor esse repellendus labore consequatur nulla laborum ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil explicabo quis voluptatem officiis deserunt, veniam earum! Iure adipisci commodi omnis iusto laudantium vero, tempora placeat repellendus minima, eveniet deserunt sint.</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cumque nihil corrupti error beatae eveniet id odit consequuntur ducimus, explicabo voluptatum architecto? Non, reiciendis? Recusandae consequuntur quis quasi quae numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, asperiores autem quam accusantium assumenda, itaque voluptas, natus deleniti cumque excepturi exercitationem commodi magni et. Est dolores omnis dignissimos maiores harum.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ipsum aliquid quis eaque aut voluptatem mollitia quas quibusdam, explicabo inventore architecto impedit quod nobis repellat voluptates? Officiis quia alias dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. In nesciunt atque rem explicabo eveniet quisquam inventore mollitia. Debitis sint consectetur suscipit, exercitationem natus similique et iusto sequi vitae molestiae minima? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, vel veritatis. Voluptatum aut ratione, voluptatibus quaerat assumenda asperiores ullam sit quia est unde! Quasi, aperiam? Deserunt eveniet vel sint minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae at laudantium ullam a voluptatibus eum. Voluptas veritatis provident architecto qui. Est nemo dolor esse repellendus labore consequatur nulla laborum ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil explicabo quis voluptatem officiis deserunt, veniam earum! Iure adipisci commodi omnis iusto laudantium vero, tempora placeat repellendus minima, eveniet deserunt sint.</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cumque nihil corrupti error beatae eveniet id odit consequuntur ducimus, explicabo voluptatum architecto? Non, reiciendis? Recusandae consequuntur quis quasi quae numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, asperiores autem quam accusantium assumenda, itaque voluptas, natus deleniti cumque excepturi exercitationem commodi magni et. Est dolores omnis dignissimos maiores harum.
+        </p>
     </main>
 </body>
 </html>
