Navegando por iframe

--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates cumque quasi in neque ex, nihil obcaecati inventore facilis, ut unde, omnis quo consequatur? Magnam sapiente atque obcaecati nam eius nesciunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora nihil nobis et quod, inventore fugit nesciunt commodi quisquam ratione perspiciatis vitae veniam quo aliquam quidem! Iste deleniti assumenda necessitatibus distinctio!</p>
 
-    <iframe src="pag001.html" frameborder="0" width="500px" height="500px"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="500px" height="500px"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates cumque quasi in neque ex, nihil obcaecati inventore facilis, ut unde, omnis quo consequatur? Magnam sapiente atque obcaecati nam eius nesciunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora nihil nobis et quod, inventore fugit nesciunt commodi quisquam ratione perspiciatis vitae veniam quo aliquam quidem! Iste deleniti assumenda necessitatibus distinctio!</p>
 </body>
