atualização ex de iframe

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -22,14 +22,14 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ipsum reiciendis magnam, eligendi inventore fugiat cupiditate earum possimus necessitatibus labore libero quam error neque quibusdam impedit assumenda. Mollitia, sunt libero.</p>
 
     <ul>
-        <li><a href="#">Primeira Página</a></li>
-        <li><a href="#">Segunda Página</a></li>
-        <li><a href="#">Terceira Página</a></li>
+        <li><a href="paginas-extras/pag001.html" target="frame">Primeira Página</a></li>
+        <li><a href="paginas-extras/pag002.html" target="frame">Segunda Página</a></li>
+        <li><a href="paginas-extras/pag003.html" target="frame">Terceira Página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vero nostrum, asperiores quibusdam facilis, libero amet labore eos blanditiis, quisquam quae? Minima enim iste libero, hic at quidem corrupti? Repellat? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur autem voluptate tenetur commodi quibusdam reiciendis blanditiis minima dolores aliquam sint ullam modi inventore eaque accusantium, laboriosam reprehenderit nulla quas ut.</p>
 
-    <iframe id="tela" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur autem voluptate tenetur commodi quibusdam reiciendis blanditiis minima dolores aliquam sint ullam modi inventore eaque accusantium, laboriosam reprehenderit nulla quas ut.</p><img src='./imagens/spfc.png'>">
         <p>Infelizmente, seu navegador não é compatível com isso.</p>
     </iframe>
 
